Added a consistent structure for all service pages.

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 <i class="fa-solid fa-user-shield fa-4x"></i>
                 <h3>Security</h3>
                 <div class="info">
-                    <a href="#">Details</a>
+                    <a href="security-serve.html">Details</a>
                 </div>
             </div>
             <!-- box2 -->
