--- a/security-serve.html
+++ b/security-serve.html
@@ -19,7 +19,10 @@
             <div class="description">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, aliquam! Recusandae voluptate quos pariatur maiores. Impedit, minima quam! Molestiae itaque iste tempore, debitis, dolores autem aliquam sint reprehenderit voluptate distinctio consequuntur, nihil nulla aliquid? Earum recusandae ipsa, maxime nemo quisquam qui odit doloremque ipsum a laudantium, ullam non, facere repellat.</p>
             </div>
-            <a class="btn" href="index.html#services">Back To Services</a>
+            <div class="btns">
+                <a class="btn" href="index.html#services">Back To Services</a>
+                <a class="btn" href="index.html">Back To Home</a>
+            </div>
         </div>
     </section>
 </body>
