Created individual HTML pages for all services (e.g., Marketing, Security, etc.).

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 <i class="fa-solid fa-tools fa-4x"></i>
                 <h3>Fixing Issues</h3>
                 <div class="info">
-                    <a href="#">Details</a>
+                    <a href="fixing-issues-serve.html">Details</a>
                 </div>
             </div>
             <!-- box3 -->
@@ -490,15 +490,15 @@
                 <i class="fa-solid fa-map-marked-alt fa-4x"></i>
                 <h3>Troubleshooting</h3>
                 <div class="info">
-                    <a href="#">Details</a>
+                    <a href="troubleshooting-serve.html">Details</a>
                 </div>
             </div>
             <!-- box4 -->
             <div class="box">
                 <i class="fa-solid fa-laptop-code fa-4x"></i>
-                <h3>Marketing</h3>
+                <h3>coding</h3>
                 <div class="info">
-                    <a href="#">Details</a>
+                    <a href="coding-serve.html">Details</a>
                 </div>
             </div>
             <!-- box5 -->
@@ -506,15 +506,15 @@
                 <i class="fa-solid fa-palette fa-4x"></i>
                 <h3>Advertising</h3>
                 <div class="info">
-                    <a href="#">Details</a>
+                    <a href="advertising-serve.html">Details</a>
                 </div>
             </div>
             <!-- box6 -->
             <div class="box">
                 <i class="fa-solid fa-bullhorn fa-4x"></i>
-                <h3>Advertising</h3>
+                <h3>Marketing</h3>
                 <div class="info">
-                    <a href="#">Details</a>
+                    <a href="marketing-serve.html">Details</a>
                 </div>
             </div>
 
